# OOP

./: AdapterInterface.h  Animal.cpp  Animal.h  Bird.cpp  Bird.h  CMakeLists.txt  Cat.cpp  Cat.h  CipherInterface.cpp  CipherInterface.h  ControllerBase.h  ControllerDisk.cpp  ControllerDisk.h  ControllerKeyboard.cpp  ControllerKeyboard.h  DrawPictures.cpp  DrawPictures.h  Factory.h  Food.cpp  Food.h  FoodInterface.cpp  FoodInterface.h  GameMenu.cpp  GameMenu.h  Gun.cpp  Gun.h  HandlerNetwork.cpp  HandlerNetwork.h  Horse.cpp  Horse.h  ISerialazable.cpp  ISerialazable.h  Input.cpp  Input.h  Mammal.cpp  Mammal.h  Network.cpp  Network.h  Observer.h  Parrot.cpp  (+27 more)
Server/Server/: Server.sln
Server/Server/Server/: Food.cpp  Food.h  Handler.cpp  Handler.h  NetworkServer.cpp  NetworkServer.h  Server.vcxproj  Server.vcxproj.filters  main.cpp
img/: food4.rar
lab2/x64/Debug/: lab2.exe.recipe  vc143.idb
lab2/x64/Debug/lab2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  lab2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
x64/Debug/: lab2.exp  lab2.lib
